# ArrowQuant_V2

./: .gitignore  AGENTS.md  ARROW_ZERO_COPY_COMPLETION_SUMMARY.md  ARROW_ZERO_COPY_DESIGN.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CI_FIX_REPORT.md  CI_STATUS_AFTER_MIGRATION.md  CI_STATUS_FINAL.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CURRENT_TASKS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXPRESSION_LAYER_P0_COMPLETION_SUMMARY.md  EXPRESSION_LAYER_PROGRESS_SUMMARY.md  FINAL_CI_STATUS.md  FINAL_STATUS_SUMMARY.md  FINAL_SYNC_UPDATE.md  FINAL_VALIDATION_REPORT.md  GITHUB_SYNC_REPORT.md  MIGRATION_COMPLETE.md  MISSION_ACCOMPLISHED.md  P0_TASKS_COMPLETION_UPDATE.md  PHASE_1_1_FINAL_ACCEPTANCE_RESULTS.json  PROJECT-TREE.txt  QUICKSTART.md  README.md  SETUP.md  STATUS.md  SYNC_COMPLETE.md  TASK_10_ERROR_HANDLING_COMPLETE.md  TASK_8_PRECISION_VALIDATION_COMPLETE.md  TASK_9_PERFORMANCE_BENCHMARK_REPORT.md  TASK_ANALYSIS.md  TECHNICAL_DEBT.md  WELCOME-BACK.md  action_trace.jsonl  aios_cli.py  (+52 more)
.github/: BENCHMARK_CI_README.md  PYTHON_CI_README.md  README.md
ai-os-diffusion/: .gitignore  GETTING_STARTED.md  MIGRATION_COMPLETE.md  PROJECT_STATUS.md  README.md  __init__.py  config.example.yaml  pyproject.toml  requirements.txt  setup.py
ai-os-diffusion/diffusion_engine/: __init__.py
ai-os-diffusion/evolution/: __init__.py
ai-os-diffusion/inference/: __init__.py
ai-os-diffusion/rust/: Cargo.toml
ai_os_diffusion/: CURRENT_STATUS.md  GPU_SUPPORT_SUMMARY.md  MIGRATION_PROGRESS.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  PHASE_0_COMPLETE.md  PHASE_0_PROGRESS.md  __init__.py
benches/: README.md  accuracy_benchmark.py  accuracy_benchmark.rs  analyze_simd_performance.py  boundary_smoothing_benchmark.rs  compare_results.py  memory_benchmark.py  memory_benchmark.rs  memory_overhead_benchmark.py  parallel_benchmark.py  parallel_benchmark.rs  quantization_bench.rs  quick_simd_benchmark.rs  run_accuracy_benchmark.py  run_boundary_smoothing_benchmark.py  run_memory_benchmark.py  run_simd_benchmark.py  run_speed_benchmark.py  run_thermodynamic_comprehensive_benchmark.py  simd_benchmark.rs  speed_benchmark.py  speed_benchmark.rs  test_simd_speedup.py  thermodynamic_accuracy_benchmark.py  thermodynamic_comprehensive_benchmark.rs
benchmarks/: arrow_benchmarks.py  arrowengine_benchmark.py
config/: embedding_tool.yaml
cost_logs/: cost_tracking.jsonl
cost_reports/: weekly_report.txt
docs/: AI-OS ArrowEngine 核心路径实施计划.md  AI-OS.Memory-system-design.md  ANGELSLIM_IMPLEMENTATION_TASKS.md  ANGELSLIM_INTEGRATION_PLAN.md  ANGELSLIM_RESEARCH_FINDINGS.md  ANGELSLIM_VERIFICATION_REPORT.md  API_REFERENCE.md  API_REFERENCE_COMPLETE.md  API_SELECTION_GUIDE.md  ARCHITECTURE.md  ARROWENGINE_QUICK_START.md  ARROWQUANT_DESIGN.md  ARROWQUANT_REQUIREMENTS.md  ARROW_API_REFERENCE.md  ARROW_FFI_INTEGRATION.md  ARROW_MIGRATION_GUIDE.md  ARROW_PERFORMANCE_REPORT.md  ARROW_UNIFIED_PIPELINE.md  ARROW_ZERO_COPY_OPTIMIZATION.md  ARROW_ZERO_COPY_USAGE.md  ASYNC_API.md  AVAILABILITY_MONITORING_GUIDE.md  AVAILABILITY_SYSTEM_COMPLETION.md  BASELINE_METRICS.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  COMPRESSION_STRATEGY_DECISION.md  CONFIGURATION_GUIDE.md  CONVERTER_IMPLEMENTATION_SUMMARY.md  COST_MONITORING_GUIDE.md  COST_MONITORING_QUICK_REFERENCE.md  DAILY_COST_VALIDATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENCODER_CONFIG.md  EVOLUTION_STRATEGY_ANALYSIS.md  INTEL_ACCELERATION.md  MIGRATION_GUIDE.md  MODEL_SELECTION_GUIDE.md  MULTIMODAL_API.md  (+55 more)
examples/: anthropic_backend_demo.py  arrow_ipc_quickstart.py  arrow_storage_example.py  async_quantization_example.py  availability_monitoring_integration.py  cache_optimization_example.py  chat_agent.py  chat_agent_optimized.py  cognitive_loop_demo.py  cognitive_loop_demo_simple.py  compressor_example.py  config_example.py  context_analyzer_demo.py  cost_monitor_integration.py  cost_monitoring_example.py  diagnose_import.py  diagnose_retrieval.py  emotion_consistency_demo.py  granularity_allocation_example.py  health_check_example.py  llm_client_example.py  local_model_integration_example.py  model_deployment_example.py  model_selector_example.py  monitoring_example.py  multimodal_complete_examples.py  nlg_engine_demo.py  optimization_demo.py  optimized_batch_processing.py  performance_optimization_example.py  piper_tts_demo.py  quality_evaluator_example.py  quantize_from_safetensors.py  quick_start.py  synchronizer_demo.py  test_api_endpoints.py  test_arrowengine_chat.py  test_chat_agent.py  test_optimizations_only.py  test_safetensors_integration.py  (+2 more)
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
llm_compression/: __init__.py  api.py  arrow_native_compressor.py  arrow_storage.py  arrow_storage_zero_copy.py  arrow_zero_copy.py  availability_monitor.py  background_queue.py  batch_optimizer.py  batch_processor.py  batch_processor_arrow.py  circuit_breaker.py  cognitive_loop.py  cognitive_loop_arrow.py  compressor.py  config.py  connection_learner.py  conversation_memory.py  conversational_agent.py  cost_monitor.py  embedder.py  embedder_adaptive.py  embedder_arrow.py  embedder_cache.py  embedding_provider.py  errors.py  expression_layer.py  fallback.py  file_importer.py  gpu_fallback.py  health.py  health_endpoints.py  internal_feedback.py  llm_client.py  logger.py  memory_primitive.py  memory_search.py  metrics.py  model_deployment.py  model_router.py  (+18 more)
notebooks/: tutorial_basic.ipynb  tutorial_batch.ipynb  tutorial_quality.ipynb
prototype/: generative.py  generative_original.py  generative_smart.py  memory_core.py  requirements.txt  simple_demo.py
python/: arrow_helpers.py  safetensors_loader.py  test_async_bridge.py  test_async_quantizer.py
quantization_comparison/: comparison_results.json
quantization_comparison_large/: comparison_results.json
quantization_comparison_medium/: comparison_results.json
scripts/: README.md  README_BASELINE.md  batch_example.json  benchmark_models.py  benchmark_multimodal.py  check_hf_normalization.py  check_model_weights.py  compare_quantization_methods.py  configure_ollama_gpu.sh  configure_qat.sh  (+62 more)
(+897 files in other folders)
