[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arrow_quant_v2"
version = "0.1.0"
description = "ArrowQuant V2 for Diffusion - High-performance quantization for diffusion models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AI-OS Team" }
]
dependencies = [
    "numpy>=1.21.0",
    "pyarrow>=10.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/ai-os/arrow-quant-v2"
Repository = "https://github.com/ai-os/arrow-quant-v2"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "arrow_quant_v2"
